added pause and animation

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -4,6 +4,7 @@
         <h1>Hoppy Cappy</h1>
         <div id="gameContainer">
           <canvas id="board"></canvas>
+          <button mat-flat-button (click)="onClickPause()">Basic</button>
         </div>
     </body>
   </div>
