--- a/src/app/app.component.css
+++ b/src/app/app.component.css
@@ -9,5 +9,9 @@ body {
 
 #board {
     background-color: lightgray;
+    background-image: url('../assets/img/background.png');
+    background-size: cover;
+    background-repeat: no-repeat;
+    background-position: center center;
     border-bottom: 1px solid black;
 }
