cleanups on code and UI

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -3,9 +3,14 @@
     <body>
         <h1>Hoppy Cappy</h1>
         <div id="gameContainer">
-          <canvas id="board"></canvas>
-          <button mat-flat-button (click)="onClickPause()">Basic</button>
+          <canvas id="board">
+
+          </canvas>
+          <menu id="controls">
+            <button mat-flat-button (click)="onClickPause()">Basic</button>
+          </menu>
         </div>
+
     </body>
   </div>
 </main>
