--- a/src/app/app.component.css
+++ b/src/app/app.component.css
@@ -5,31 +5,49 @@
   outline: 0;
   font-size: 100%;
   vertical-align: baseline;
+  font-family: "Jersey 10", serif;
 }
 
 main {
   background-color: rgb(255, 169, 169);
   background-image: url('../assets/img/background.jpg');
-  background-size: cover;
-  background-repeat: no-repeat;
   background-position: center center;
+  background-repeat: repeat-y;
   height: 100%;
 }
 
-body {
-    font-family:'Courier New', Courier, monospace;
-    text-align: center;
-    font-size: 40px;
+#gameContainer {
+  padding-top: 225px;
 }
 
-#container {
+#titleContainer {
+  font-family: "Jersey 10", serif;
+  position: absolute;
+  width: 100%;
+  left: 0;
+  z-index: 1;
+}
+
+body h1 {
+  color: rgb(245, 239, 220);
+  letter-spacing: 3px;
+  font-size: 40px;
+  font-weight: 1px;
+}
+
+body {
+  text-align: center;
+}
+
+#boardOutContainer {
   max-width: 850px;
   width: 100%;
   height: auto;
   margin: auto;
+  line-height: 0px;
 }
 
-#gameContainer {
+#boardContainer {
   display: inline-flexbox;
   position: relative;
 }
@@ -38,14 +56,11 @@ body {
   width: 100%;
   bottom: 0;
   height: 50%;
-  justify-content: center;
-  margin-right: 10px;
-  margin-top: 10px;
   position: absolute;
 }
 
 #playBtn {
-  /* padding: 10px 16px; */
+  font-family: "Jersey 10", serif;
   background: rgb(245, 239, 220);
   font-size: 18px;
   font-weight: 100;
@@ -53,23 +68,16 @@ body {
   cursor: pointer;
   border: none;
   color: black;
-  animation: bounce 3s infinite;
+  animation: bounce 7s infinite;
 }
 @keyframes bounce {
-  0%, 25%, 50%, 75%, 90%, 100% {
+  0%, 20%, 40%, 60%, 80%, 100% {
     transform: translateY(0);
   }
-  15%, 40% {
+  10%, 30% , 50%, 70%, 90% {
     transform: translateY(-20px);
   }
-  65%, 80%  {
-    transform: translateY(-15px);
-  }
-  95%  {
-    transform: translateY(-5px);
-  }
 }
-
 
 #board {
     background-color: lightgray;
@@ -78,5 +86,28 @@ body {
     background-repeat: no-repeat;
     background-position: center center;
     outline: 1px solid black;
+    margin-top: 5px;
+    margin-left: 5px;
+    margin-right: 5px;
+    border-radius: 2px;
     z-index: 1;
 }
+
+
+#rewardsContainer {
+  height: 48px;
+  margin-top: 10px;
+  margin-left: 8px;
+  margin-right: 8px;
+  outline: 1px solid rgb(0, 0, 0);
+  background: rgb(245, 239, 220);
+  border-radius: 2px;
+  /* animation: rewards 2s linear; */
+}
+
+#rewardsText{
+  height: 48px;
+  line-height: 48px;
+  font-size: 20px;
+}
+
